[tool.poetry]
name = "cali"
version = "0.1.0"
description = ""
authors = ["Brian Sunter <public@briansunter.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
